--- a/style.css
+++ b/style.css
@@ -123,3 +123,14 @@ img{
 }
 
 /* end */
+
+/* Second section code start */
+.blogs{
+    width: 1100px;
+    display: grid;
+    grid-template-columns: 300px 1fr;
+}
+.all-blogs{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
