--- a/style.css
+++ b/style.css
@@ -103,9 +103,9 @@ img{
     }
 }
 
-/* End */
+/* Hero section tablet END */
 
-/* Hero section Mobile */
+/* Hero section Mobile START*/
 
 @media (max-width: 576px) {
     .hero{
@@ -128,7 +128,7 @@ img{
      
 }
 
-/* end */
+/* Hero section Mobile END */
 
 /* Blog section Big device START */
 .sec-container{
@@ -239,3 +239,66 @@ img{
         padding: 0 30px;
     }
 }
+/* Blog section Mobile END */
+
+/* Footer START */
+.footer{
+    height: 440px;
+    background-color: #161616;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+}
+.footer h2{
+    text-align: center;
+}
+.footer hr{
+    width: 1100px;
+    margin-bottom: 20px;
+}
+.footer a{
+    display: block;
+    text-decoration: none;
+    color: #ffffff;
+}
+.item{
+    display: flex;
+    gap: 40px;
+    font-weight: 200;
+}
+/* Footer END */
+
+/* Footer Tablet START */
+@media(max-width:768px){
+    .footer{
+        height: 340px;
+    }
+    .footer hr{
+        width: 600px;
+    }
+    .item{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 60px;
+        justify-content: center;
+    }
+}
+/* Footer Tablet END */
+/* Footer Mobile START */
+@media (max-width: 576px){
+    .footer{
+        padding: 20px 0;
+    }
+    .footer hr{
+        width: 330px;
+    }
+    .item{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        gap: 20px;
+    }
+}
+/* Footer Mobile END */
