--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ img{
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
+    padding-bottom: 20px;
 }
 
 .btn1{
@@ -69,9 +70,6 @@ img{
 .live{
     text-decoration: none;
     color: #ffffff;
-}
-.live:hover{
-    color: red;
 }
 
 .show{
